--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ contourpy==1.3.2
 cycler==0.12.1
 Flask==3.1.1
 fonttools==4.58.0
-gunicorn==23.0.0
+gunicorn
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
