--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,43 @@
-beautifulsoup4==4.13.4
-blinker==1.9.0
-bs4==0.0.2
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.2.0
-colorama==0.4.6
-contourpy==1.3.2
-cycler==0.12.1
-Flask==3.1.1
-fonttools==4.58.0
+beautifulsoup4
+blinker
+bs4
+certifi
+charset-normalizer
+click
+colorama
+contourpy
+cycler
+Flask
+fonttools
 gunicorn
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.0
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
+idna
+itsdangerous
+Jinja2
+joblib
+kiwisolver
+MarkupSafe
 matplotlib
-narwhals==1.40.0
-nltk==3.9.1
-numpy==2.2.6
-packaging==25.0
-pandas==2.2.3
-pillow==11.2.1
+narwhals
+nltk
+numpy
+packaging
+pandas
+pillow
 plotly
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-regex==2024.11.6
-requests==2.32.3
-scikit-learn==1.6.1
-scipy==1.15.3
-six==1.17.0
-soupsieve==2.7
-threadpoolctl==3.6.0
-tqdm==4.67.1
-typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
-Werkzeug==3.1.3
-wordcloud==1.9.4
-streamlit==1.39.0
+pyparsing
+python-dateutil
+pytz
+regex
+requests
+scikit-learn
+scipy
+six
+soupsieve
+threadpoolctl
+tqdm
+typing_extensions
+tzdata
+urllib3
+Werkzeug
+wordcloud
+streamlit
